# rasterizer

./: .gitignore  CMakeLists.txt  README.md
demos/: stats.py
demos/cat/: CMakeLists.txt  cat.cpp  cat.ppm
src/: CMakeLists.txt  aligning_mallocator.hpp  batch_tasks.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  mouse.cpp  mouse.hpp  rasterizer.hpp  screen_buffer.hpp  screen_lock.hpp  shader.hpp  texture.hpp  thread_pool.cpp  thread_pool.hpp  tty_context.cpp  tty_context.hpp
src/shaders/: basic_fragment_shader.hpp  basic_vertex_shader.hpp  phong_fragment_shader.hpp  phong_vertex_shader.hpp  shaders.hpp
